logs/boomslang.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/boomslang'...
Compiling './lib/python3.5/site-packages/boomslang/Label.py'...
***   File "./lib/python3.5/site-packages/boomslang/Label.py", line 62
    raise AttributeError, "Expected a two-element tuple when " \
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boomslang/Location.py'...
***   File "./lib/python3.5/site-packages/boomslang/Location.py", line 49
    raise AttributeError, self.name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boomslang/StepType.py'...
***   File "./lib/python3.5/site-packages/boomslang/StepType.py", line 17
    raise AttributeError, self.name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boomslang/WeightedPlotLayout.py'...
***   File "./lib/python3.5/site-packages/boomslang/WeightedPlotLayout.py", line 52
    print "WeightedPlotLayout.plot(): No data to plot!"
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/boomslang-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
